# robocar_dev_sim

./: README.md  build.sh  clean.sh
scripts/: maunal_control.sh  pid_control.sh  pp_control.sh  run_fake.sh
scripts/gazebo/: run_gazebo.sh  run_navigation.sh  run_sim_auto.sh  run_sim_rviz.sh  run_slam.sh
scripts/test/: dwa_planner.sh  kill_gazebo.sh  lattice_planner.sh  main.sh  rds_control.sh  run_websocket.sh
src/config/: logger.conf  n_info_router.ini
src/msgs/msg_common/: CMakeLists.txt  package.xml
src/msgs/msg_common/msg/: SensorState.msg
src/nodes/robocar_algorithm/control/pid_control/: CMakeLists.txt  README.md  package.xml
src/nodes/robocar_algorithm/control/pid_control/launch/: pid_control.launch
src/nodes/robocar_algorithm/control/pid_control/src/: Test.cpp  geometry.h  main.cpp  pid.cpp  pid.h  vector2D.h
src/nodes/robocar_algorithm/control/pure_pursuit/src/: pure_pursuit.cpp
src/nodes/robocar_algorithm/control/teleop_twist_keyboard/: CMakeLists.txt  package.xml
src/nodes/robocar_algorithm/control/teleop_twist_keyboard/src/: simple_teleop.cpp  teleop_twist_keyboard.cpp
src/nodes/robocar_algorithm/perception/turtlebot3_slam/launch/: turtlebot3_gmapping.launch  turtlebot3_slam.launch
src/nodes/robocar_algorithm/perception/turtlebot3_slam/rviz/: turtlebot3_gmapping.rviz
src/nodes/robocar_algorithm/planning/Hybrid_A_Star/: CMakeLists.txt  readme.md
src/nodes/robocar_algorithm/planning/Hybrid_A_Star/app/: run_hybrid_astar.cpp
src/nodes/robocar_algorithm/planning/Hybrid_A_Star/include/hybrid_a_star/: hybrid_a_star_flow.h
src/nodes/robocar_algorithm/planning/Hybrid_A_Star/maps/: map.yaml
src/nodes/robocar_algorithm/planning/Hybrid_A_Star/rviz/: display_hybrid_astar.rviz
src/nodes/robocar_algorithm/planning/Hybrid_A_Star/src/: hybrid_a_star_flow.cpp
src/nodes/robocar_algorithm/planning/turtlebot3_navigation/launch/: move_base.launch  turtlebot3_navigation.launch
src/nodes/robocar_algorithm/planning/turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
src/nodes/robocar_bridge/robocar_info_router/: CMakeLists.txt  README.md  package.xml
src/nodes/robocar_bridge/robocar_info_router/include/: c_cockpit_router.h  config_io.h  easylogging++.h  mine_rds.pb.h  my_typedef.h  openssl_code.h  utils.h
src/nodes/robocar_bridge/robocar_info_router/src/: c_cockpit_router.cpp  config_io.cpp  easylogging++.cc  mine_rds.pb.cc  mine_rds.proto  n_info_router.cpp  openssl_code.cc  utils.cpp
src/nodes/robocar_simulation/robocar_bringup/: CMakeLists.txt  README.md  package.xml
src/nodes/robocar_simulation/robocar_bringup/launch/: turtlebot3_remote.launch
src/nodes/robocar_simulation/robocar_bringup/launch/includes/: description.launch.xml
src/nodes/robocar_simulation/robocar_bringup/src/: turtlebot3_diagnostics.cpp
src/nodes/robocar_simulation/robocar_description/: CMakeLists.txt  package.xml
src/nodes/robocar_simulation/robocar_description/urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
src/nodes/robocar_simulation/robocar_fake/: CMakeLists.txt  package.xml
src/nodes/robocar_simulation/robocar_fake/include/: robocar_fake.h
src/nodes/robocar_simulation/robocar_fake/launch/: robocar_fake.launch
src/nodes/robocar_simulation/robocar_fake/rviz/: robocar_fake.rviz
src/nodes/robocar_simulation/robocar_fake/src/: robocar_fake.cpp
src/nodes/robocar_simulation/robocar_gazebo/: CMakeLists.txt  package.xml
src/nodes/robocar_simulation/robocar_gazebo/include/: robocar_gazebo.h
src/nodes/robocar_simulation/robocar_gazebo/launch/: robocar_empty_world.launch  robocar_gazebo_rviz.launch  robocar_house.launch  robocar_simulation.launch  robocar_world.launch
src/nodes/robocar_simulation/robocar_gazebo/rviz/: robocar_gazebo_model.rviz
src/nodes/robocar_simulation/robocar_gazebo/src/: robocar_gazebo.cpp
